--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,13 @@
             <scope>test</scope>
             <type>jar</type>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.glassfish.jersey</groupId>
             <artifactId>jax-rs-ri</artifactId>
             <version>2.0-rc1</version>
             <scope>test</scope>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
         
         <!-- selenium -->
         <dependency>
