--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <name>AF_3sem</name>
 
     <properties>
-        <!--<endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>-->
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     
@@ -93,21 +93,21 @@
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
-<!--                    <compilerArguments>
+                    <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
-                    </compilerArguments>-->
+                    </compilerArguments>
                 </configuration>
             </plugin>
-<!--            <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.3</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
-            </plugin>-->
+            </plugin>
             
-<!--            <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.6</version>
@@ -131,7 +131,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
             
             
             
