--- a/pom.xml
+++ b/pom.xml
@@ -174,7 +174,7 @@
                 <version>2.12.1</version>
                 <configuration>
                     <excludes>
-                        <exclude>**/*IntegrationTest*</exclude>
+<!--                        <exclude>**/*IntegrationTest*</exclude>-->
                         <exclude>**/*Selenium*</exclude>
                     </excludes>
                 </configuration>
