--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
          <version>2.24.1</version>
          <type>zip</type>
       </dependency>
+      <dependency>
+         <groupId>javax</groupId>
+         <artifactId>javaee-web-api</artifactId>
+         <version>7.0</version>
+         <type>jar</type>
+      </dependency>
    </dependencies>
     
 
